--- a/CoolBlazor/CoolBlazor/Pages/Content/Home.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Content/Home.razor
@@ -9,9 +9,10 @@
     <MudGrid>
         <MudItem xs="12" sm="12" md="12">
             <div class="d-flex justify-center mt-4">
-                <MudIcon Icon="@CoolBlazor.Static.Icons.CustomIcons.BlazorHero" Color="Color.Primary" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 250px; height: 250px;" />
+                @* <MudIcon Icon="@CoolBlazor.Static.Icons.CustomIcons.BlazorHero" Color="Color.Primary" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 250px; height: 250px;" /> *@
                 @* <MudIcon Icon="@CustomIcons.BlazorHero" Color="Color.Primary" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 250px; height: 250px;" /> *@
-                @* <MudImage Fluid="true" Src="images/Dom.png" Alt="Dom" Elevation="0" Class="dom-image"/> *@
+                <MudImage Fluid="true" Src="images/Logos/CoolBlazor-logo-no-background.png" Alt="Dom" Elevation="0" Class="" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 250px; height: 250px;"/>
+                
             </div>
         </MudItem>
         <MudItem xs="12" sm="12" md="12">
