--- a/CoolBlazor/CoolBlazor/Shared/MainBody.razor
+++ b/CoolBlazor/CoolBlazor/Shared/MainBody.razor
@@ -3,7 +3,7 @@
 
 
 <MudAppBar Elevation="25">
-    <MudIcon Icon="@CustomIcons.BlazorHero" Size="Size.Large" ViewBox="0 0 500 500" />
+    <MudIcon Icon="@CustomIcons.CoolBlazor" Size="Size.Large" ViewBox="0 0 500 500" />
     <MudText Typo="Typo.h6" Class="ml-4">CoolBlazor</MudText>
     <MudToolBar DisableGutters="true">
         <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" OnClick="@((e) => DrawerToggle())"
