--- a/CoolBlazor/CoolBlazor/Pages/Content/Home.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Content/Home.razor
@@ -12,7 +12,7 @@
                 @* <MudIcon Icon="@CoolBlazor.Static.Icons.CustomIcons.BlazorHero" Color="Color.Primary" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 250px; height: 250px;" /> *@
                 @* <MudIcon Icon="@CustomIcons.BlazorHero" Color="Color.Primary" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 250px; height: 250px;" /> *@
                 @* <MudImage Src="images/Logos/CoolBlazor-logo-no-background.png" Width="332" Height="250" Alt="Swedish Farm House" Elevation="25" Class="rounded-lg ma-4"/> *@
-                
+                <MudIcon Icon="@CoolBlazor.Static.Icons.CustomIcons.CoolBlazorLogo" Size="Size.Large" ViewBox="0 0 515 515" Style="width: 250px; height: 250px;" />
             </div>
         </MudItem>
         <MudItem xs="12" sm="12" md="12">
