--- a/CoolBlazor/CoolBlazor/Pages/Components/ImageResizorModal.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Components/ImageResizorModal.razor
@@ -46,7 +46,7 @@
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="Color.Primary" OnClick="GetCroppedCanvasDataURLAsync">Submit</MudButton>
+        <MudButton Color="Color.Dark" OnClick="GetCroppedCanvasDataURLAsync">Submit</MudButton>
     </DialogActions>
 </MudDialog>
 
