--- a/CoolBlazor/CoolBlazor/Pages/Content/Dashboard.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Content/Dashboard.razor
@@ -7,7 +7,7 @@
 <ToolBoxTitle Title="@_localizer["Dashboard"]" Description="@_localizer["Realtime Updates & Insights with SignalR."]" />
 @if (!_loaded)
 {
-    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+    <MudProgressCircular Color="Color.Dark" Indeterminate="true" />
 }
 else
 {
