--- a/CoolBlazor/CoolBlazor/Pages/Identity/RolePermissions.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Identity/RolePermissions.razor
@@ -8,7 +8,7 @@
 <ToolBoxTitle Title="@_localizer["Manage Permission"]" Description="@Description" />
 @if (!_loaded)
 {
-    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+    <MudProgressCircular Color="Color.Dark" Indeterminate="true" />
 }
 else
 {
