--- a/CoolBlazor/CoolBlazor/Pages/Identity/Forgot.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Identity/Forgot.razor
@@ -8,7 +8,8 @@
     <MudGrid>
         <MudItem xs="12">
             <div class="d-flex justify-center">
-                <MudIcon Icon="@Static.Icons.CustomIcons.BlazorHero" Color="Color.Primary" Size="Size.Large" ViewBox="0 0 500 500" Style="width: 100px; height: 100px;" />
+                <MudIcon Icon="@Static.Icons.CustomIcons.CoolBlazorLogo" Size="Size.Large" ViewBox="0 0 510 510"
+                    Style="@($"color:{CoolBlazor.Static.Colors.CustomColors.LogoColor};")" class="forgot-logo" />
             </div>
         </MudItem>
         <MudItem xs="12">
@@ -22,10 +23,19 @@
             </div>
         </MudItem>
         <MudItem xs="12">
-            <MudTextField Label="@_localizer["E-mail"]" @bind-Value="_emailModel.Email" For="@(() => _emailModel.Email)" Variant="Variant.Outlined"></MudTextField>
+            <MudTextField Label="@_localizer["E-mail"]" @bind-Value="_emailModel.Email" For="@(() => _emailModel.Email)"
+                Variant="Variant.Outlined"></MudTextField>
         </MudItem>
         <MudItem xs="12" Class="d-flex justify-center">
-            <MudButton Variant="Variant.Filled" Disabled="@(!Validated)" Color="Color.Primary" Size="Size.Large" ButtonType="ButtonType.Submit" FullWidth="true">@_localizer["Reset Password"]</MudButton>
+            <MudButton Variant="Variant.Filled" Disabled="@(!Validated)" Color="Color.Dark" Size="Size.Large"
+                ButtonType="ButtonType.Submit" FullWidth="true">@_localizer["Reset Password"]</MudButton>
         </MudItem>
     </MudGrid>
 </EditForm>
+
+<style>
+    .forgot-logo {
+        width: 100px;
+        height: 100px;
+    }
+</style>
