--- a/CoolBlazor/CoolBlazor/Pages/Identity/Profile.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Identity/Profile.razor
@@ -70,7 +70,7 @@
                     </MudGrid>
                 </MudCardContent>
                 <MudCardActions Class="pb-4 pl-4">
-                    <MudButton Variant="Variant.Filled" Disabled="@(!Validated)" Color="Color.Primary" Class="ml-auto"
+                    <MudButton Variant="Variant.Filled" Disabled="@(!Validated)" Color="Color.Secondary" Class="ml-auto"
                         ButtonType="ButtonType.Submit">@_localizer["Save Changes"]</MudButton>
                 </MudCardActions>
             </MudCard>
