--- a/CoolBlazor/CoolBlazor/_Imports.razor
+++ b/CoolBlazor/CoolBlazor/_Imports.razor
@@ -11,6 +11,8 @@
 @using MudBlazor
 @using Blazored.LocalStorage
 @using Cropper.Blazor.Components
+@using PSC.Blazor.Components.MarkdownEditor
+@using PSC.Blazor.Components.MarkdownEditor.EventsArgs
 
 @using CoolBlazor.Infrastructure.Managers.Identity.Authentication
 @using CoolBlazor.Infrastructure.Managers.Identity.Users
