--- a/CoolBlazor/CoolBlazor/Pages/_Host.cshtml
+++ b/CoolBlazor/CoolBlazor/Pages/_Host.cshtml
@@ -17,7 +17,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <!-- using Blazor.Cropper-->
     <link href="_content/Cropper.Blazor/cropper.min.css" rel="stylesheet" />
+    <!-- using Mudblazor.Markdown-->
+    <link href="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.css" rel="stylesheet" />
+    <link href="/_content/PSC.Blazor.Components.MarkdownEditor/css/alert.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/path/to/styles/default.min.css">
+    <link href="/_content/PSC.Blazor.Components.MarkdownEditor/css/easymde.min.css" rel="stylesheet" />
+
     @* <component type="typeof(HeadOutlet)" render-mode="Server" /> *@
 </head>
 
@@ -25,6 +32,7 @@
     @* <component type="typeof(App)" render-mode="ServerPrerendered" /> *@
     @* <component type="typeof(App)" render-mode="Server" /> *@
     @(await Html.RenderComponentAsync<App>(RenderMode.Server))
+
 
     @* @(await Html.RenderComponentAsync<App>(RenderMode.Server)) *@
     <div id="blazor-error-ui">
@@ -41,7 +49,9 @@
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/Cropper.Blazor/cropper.min.js"></script>
-
+    <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/easymde.min.js"></script>
+    <script src="/_content/PSC.Blazor.Components.MarkdownEditor/js/markdownEditor.js"></script>
+    <script src="/path/to/highlight.min.js"></script>
 </body>
 
 </html>
