--- a/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ImageResizorModal.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ImageResizorModal.razor
@@ -1,5 +1,6 @@
 @inject Microsoft.Extensions.Localization.IStringLocalizer<ImageResizorModal> _localizer
-@using BootstrapBlazor.Components
+@namespace CoolBlazor.Pages.Identity.Dialogs
+@using CoolBlazor.Shared.Dialogs
 @using Cropper.Blazor
 @using Cropper.Blazor.Models;
 
