--- a/CoolBlazor/CoolBlazor/Pages/Content/Home.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Content/Home.razor
@@ -28,11 +28,11 @@
             <MudExpansionPanels>
                 <MudExpansionPanel Text="@_localizer["Getting Started"]" MaxHeight="150">
                     @_localizer["In case you are stuck anywhere or have any queries regarding this implementation, I have compiled a Quick Start Guide for you reference."]
-                    <MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Secondary" Link="https://codewithmukesh.com/blazorhero" Target="_blank">@_localizer["Read The Guide"]</MudButton>
+                    <MudButton Variant="Variant.Text" DisableElevation="true" Color="Color.Secondary" Link="https://github.com/UMkashingHui/CoolBlazor" Target="_blank">@_localizer["Read The Guide"]</MudButton>
                 </MudExpansionPanel>
                 <MudExpansionPanel Text="@_localizer["Important Links"]" MaxHeight="500">
                     <MudList Clickable="true">
-                        <MudListItem Text="@_localizer["Github Repository : Do Not Forget to Leave a Star ;)"]" Href="https://github.com/blazorhero/CleanArchitecture" />
+                        <MudListItem Text="@_localizer["Github Repository : Do Not Forget to Leave a Star ;)"]" Href="https://github.com/UMkashingHui/CoolBlazor" />
                         <MudListItem Text="@_localizer["Quick Start Guide"]" Href="https://codewithmukesh.com/blazorhero" />
                     </MudList>
                 </MudExpansionPanel>
