--- a/CoolBlazor/CoolBlazor/Shared/MainBody.razor
+++ b/CoolBlazor/CoolBlazor/Shared/MainBody.razor
@@ -65,7 +65,8 @@
         <ActivatorContent>
             @if (string.IsNullOrEmpty(ImageDataUrl))
             {
-                <MudAvatar Color="Color.Secondary">@FirstLetterOfFirstName</MudAvatar>
+                <MudAvatar Color="Color.Tertiary">@FirstLetterOfFirstName
+                </MudAvatar>
             }
             else
             {
