--- a/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ImageResizorModal.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ImageResizorModal.razor
@@ -47,7 +47,8 @@
     </DialogContent>
     <DialogActions>
         <MudButton OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="Color.Dark" OnClick="GetCroppedCanvasDataURLAsync">Submit</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Secondary" OnClick="GetCroppedCanvasDataURLAsync">Submit
+        </MudButton>
     </DialogActions>
 </MudDialog>
 
