Change avator crop logic...

--- a/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ActivateConfirmation.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ActivateConfirmation.razor
@@ -1,4 +1,4 @@
-﻿@namespace CoolBlazor.Shared.Dialogs
+﻿@namespace CoolBlazor.Identity.Dialogs
 @using CoolBlazor.Infrastructure.Models.Requests.Identity
 @inject Microsoft.Extensions.Localization.IStringLocalizer<ActivateConfirmation> localizer
 <MudDialog>
