--- a/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ImageResizeModal.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ImageResizeModal.razor
@@ -1,5 +1,4 @@
-@inject Microsoft.Extensions.Localization.IStringLocalizer<ImageResizorModal> _localizer
-@namespace CoolBlazor.Pages.Identity.Dialogs
+@inject Microsoft.Extensions.Localization.IStringLocalizer<ImageResizeModal> _localizer
 @using CoolBlazor.Shared.Dialogs
 @using Cropper.Blazor
 @using Cropper.Blazor.Models;
