--- a/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ImageResizeModal.razor
+++ b/CoolBlazor/CoolBlazor/Pages/Identity/Dialogs/ImageResizeModal.razor
@@ -1,4 +1,5 @@
 @inject Microsoft.Extensions.Localization.IStringLocalizer<ImageResizeModal> _localizer
+@using Cropper.Blazor.Extensions
 @using Cropper.Blazor.Models;
 @using Cropper.Blazor.Components;
 @namespace CoolBlazor.Pages.Identity.Dialogs
@@ -53,7 +54,6 @@
 
 @code {
     [CascadingParameter] MudDialogInstance MudDialog { get; set; }
-    [Parameter] public string CropImageName { get; set; }
     [Parameter] public string CropImageUrl { get; set; }
     private CropperComponent? cropperComponent = null;
     // Minimum relative sizes
@@ -63,10 +63,10 @@
     private static decimal height = 200;
     private static decimal width = 200;
     private static SetDataOptions setDataOptions = new SetDataOptions
-    {
-        Height = height,
-        Width = width
-    };
+        {
+            Height = height,
+            Width = width
+        };
     private Options cropperOptions = new Options
         {
             MinCropBoxWidth = minCropBoxWidth,
@@ -76,10 +76,17 @@
             SetDataOptions = setDataOptions,
             Preview = ".img-example-preview"
         };
-    void Submit()
+    public async Task Submit()
     {
-        MudDialog.Close(DialogResult.Ok(true));
-        return cropperComponent;
+        GetCroppedCanvasOptions getCroppedCanvasOptions = new GetCroppedCanvasOptions
+            {
+                MaxHeight = 4096,
+                MaxWidth = 4096,
+                ImageSmoothingQuality = ImageSmoothingQuality.High.ToEnumString()
+            };
+        // Get a reference to a JavaScript cropped canvas object.
+        string croppedData = await cropperComponent.GetCroppedCanvasDataURLAsync(getCroppedCanvasOptions);
+        MudDialog.Close(DialogResult.Ok(croppedData));
     }
     void Cancel() => MudDialog.Cancel();
 }
