--- a/CoolBlazor/CoolBlazor/_Imports.razor
+++ b/CoolBlazor/CoolBlazor/_Imports.razor
@@ -38,5 +38,5 @@
 @inject IAccountManager _accountManager
 @inject IJSRuntime _jsRuntime
 @inject IJSRuntime jsRuntime
-@inject ImageManager _imageManager
+@inject S3ObjectManager _S3ObjectManager
 @inject ImageOperator _imageOperator
